# installer

./: .clang-format  .gitignore  CMakeLists.txt
src/: Errors.h  FileCopier.cpp  FileCopier.h  Installer.cpp  Installer.h  main.cpp
src/Parser/: ArgumentsParser.cpp  ArgumentsParser.h  InstallationArguments.h
src/Transaction/: InstallTransaction.cpp  InstallTransaction.h  InstalledResource.h
src/Transaction/Resources/: InstalledDirectory.cpp  InstalledDirectory.h  InstalledFile.cpp  InstalledFile.h
src/Validations/: FileValidations.cpp  FileValidations.h
